Fix wrong paths in sample settings files May as well do this while I'm at it!

--- a/local/samples/settings.nonroot.sample
+++ b/local/samples/settings.nonroot.sample
@@ -1,6 +1,6 @@
 # This is a sample settings.nonroot file
 # It is designed to be directly parsable with bash, and a Perl helper is included in the helpers/ directory
-# Copy this file to /dreamhack/etc/settings.nonroot and make sure nonroot users can access it before making any changes
+# Copy this file to /dreamhack/local/settings.nonroot and make sure nonroot users can access it before making any changes
 
 dh_db_readonly_username="dreamhacks_ro"
 dh_db_readonly_password="example"
