Add placeholder for var/maintain.d
This directory needs to exist for general user maintenance operations to work.
It also needs to be chmodded 777, so I'll add that to the install instructions
in the next commit.

Also adding an exception for the .placeholder file in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ local/settings.*
 opt/archive/*
 opt/migration/*
 var/maintain.d
+!var/maintain.d/.placeholder
 www/dev/coverage
 www/dev/docs
 www/dev/test
