--- a/local/samples/settings.root.sample
+++ b/local/samples/settings.root.sample
@@ -2,6 +2,8 @@
 # It is designed to be directly parsable with bash, and a Perl helper is included in the helpers/ directory
 # Copy this file to /dreamhack/local/settings.root and chmod it so that only root has access before making any changes
 
+source /dreamhack/local/settings.shared
+
 dh_db_root_username="root"
 dh_db_root_password="example"
 
