Use ~ instead of $HOME in comments
Using ~ instead of the $HOME variable is probably better in the comments of the
new httpd.conf.

--- a/var/skel/apache/conf/httpd.conf
+++ b/var/skel/apache/conf/httpd.conf
@@ -1,5 +1,5 @@
 # Local Apache changes may be made in this file, if desired. The
-# $HOME/apache/conf/envvars file defines user-specific environment variables
-# used in the main Apache config.
+# ~/apache/conf/envvars file defines user-specific environment variables used
+# in the main Apache config.
 
 Include /dreamhack/etc/apache/httpd.conf
