A few more changes to the system-wide httpd.conf
Load a few more authorisation modules, change names of deprecated
directives and include a "Require all granted" line.

--- a/etc/apache/httpd.conf
+++ b/etc/apache/httpd.conf
@@ -14,11 +14,14 @@ Listen 127.0.0.1:${DREAMHACK_PORT}
 User ${DREAMHACK_SSHNAME}
 Group dreamhack
 
+# Some of the directive names below have been changed in Apache 2.4; although
+# the old names still work, it's better to use the new names. See
+# https://httpd.apache.org/docs/current/upgrading.html for more information.
 MinSpareServers 1
 MaxSpareServers 2
 StartServers 2
-MaxClients 2
-MaxRequestsPerChild 100
+MaxRequestWorkers 2
+MaxConnectionsPerChild 100
 
 UseCanonicalName off
 SendBufferSize 163840
@@ -26,7 +29,9 @@ SendBufferSize 163840
 DocumentRoot ${DREAMHACK_DIR}/dw/htdocs
 <Directory "${DREAMHACK_DIR}/dw/htdocs">
     Options FollowSymLinks MultiViews
-    AllowOverride All
+    # "AllowOverride All" has been removed as nobody was using .htaccess files.
+    # If you need it, override it in your local httpd.conf.
+    Require all granted
 </Directory>
 
 LoadModule apreq_module /usr/lib/apache2/modules/mod_apreq2.so
@@ -41,4 +46,10 @@ TypesConfig /etc/mime.types
 
 Include /etc/apache2/mods-available/mpm_prefork.load
 Include /etc/apache2/mods-available/mpm_prefork.conf
+
+Include /etc/apache2/mods-available/auth_basic.load
+Include /etc/apache2/mods-available/authn_core.load
+Include /etc/apache2/mods-available/authn_file.load
 Include /etc/apache2/mods-available/authz_core.load
+Include /etc/apache2/mods-available/authz_host.load
+Include /etc/apache2/mods-available/authz_user.load
