File modifications for new server
This commit has all the modifications needed for the new server. A lot of
outdated things have been fixed as I took the time to make sure everything was
good to go.

This commit doesn't include a new INSTALL file; I do however have notes for all
the changes necessary and will be fixing it soon.

--- a/local/samples/settings.shared.sample
+++ b/local/samples/settings.shared.sample
@@ -5,7 +5,7 @@
 dh_service_name="Dreamhack"
 
 dh_domain="hack.dreamwidth.net"
-dh_domain_ssh="hack.dreamwidth.net"
+dh_domain_ssh="ssh-hack.dreamwidth.net"
 
 dh_from_email_address="dreamhack@example.com"
 dh_maintainer="The Dreamhack Maintainer"
