--- a/setup/apache/ports.conf
+++ b/setup/apache/ports.conf
@@ -1,6 +1,10 @@
 Listen 127.0.0.1:8000
 Listen 127.0.0.1:6936
 
-<IfModule mod_ssl.c>
+<IfModule ssl_module>
+    Listen 443
+</IfModule>
+
+<IfModule mod_gnutls.c>
     Listen 443
 </IfModule>
