--- a/setup/apache/sites/default.conf
+++ b/setup/apache/sites/default.conf
@@ -13,11 +13,7 @@ NameVirtualHost *:8000
 		Options Indexes FollowSymLinks MultiViews Includes
 		AllowOverride None
 		DirectoryIndex index.shtml
-		Order allow,deny
-		allow from all
-		<Files "/apply.cgi">
-			SetHandler cgi-script
-		</Files>
+		Require all granted
 		Redirect /coverage/ /dev/coverage/
 	</Directory>
 	<Directory /dreamhack/www/dev/docs/>
@@ -37,8 +33,7 @@ NameVirtualHost *:8000
 #	<Directory "/usr/lib/cgi-bin">
 #		AllowOverride None
 #		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-#		Order allow,deny
-#		Allow from all
+#		Require all granted
 #	</Directory>
 
 	ErrorLog /var/log/apache2/error.log
@@ -54,8 +49,7 @@ NameVirtualHost *:8000
 #    <Directory "/usr/share/doc/">
 #        Options Indexes MultiViews FollowSymLinks
 #        AllowOverride None
-#        Order deny,allow
-#        Deny from all
+#        Require all denied
 #        Allow from 127.0.0.0/255.0.0.0 ::1/128
 #    </Directory>
 
