override mpm_prefork defaults

--- a/etc/apache/httpd.conf
+++ b/etc/apache/httpd.conf
@@ -45,7 +45,7 @@ LoadModule mime_module /usr/lib/apache2/modules/mod_mime.so
 TypesConfig /etc/mime.types
 
 Include /etc/apache2/mods-available/mpm_prefork.load
-Include /etc/apache2/mods-available/mpm_prefork.conf
+## Whoops nope Include /etc/apache2/mods-available/mpm_prefork.conf
 
 Include /etc/apache2/mods-available/auth_basic.load
 Include /etc/apache2/mods-available/authn_core.load
